syntax = "proto3";

package group;

option go_package = "/;group";

service GroupService {
    rpc Add (AddRequest) returns (UUID);
    rpc Find (FindRequest) returns (Groups);
    rpc GetAll (GetAllRequest) returns (Groups);
    rpc Remove (RemoveRequest) returns (Empty);
}

// Entities:
message Group {
    string id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    string name = 4;
}

message Groups {
    uint32 pages_count = 1;
    uint32 total_items = 2;
    uint32 per_page = 3;
    repeated Group groups = 4;
}

message AddRequest {
    string name = 1;
}

message FindRequest {
    PaginationRequest pagination = 1;
    string id = 2;
    string name = 3;
}

message GetAllRequest {
    PaginationRequest pagination = 1;
}

message RemoveRequest {
    string group_id = 1;
}


// Base
message UUID {
    string value = 1;
}

message Empty {
}

message Exist {
    bool value = 1;
}

message PaginationRequest {
    uint32 page = 1;
    int32 limit = 2;
    uint32 offset = 3;
}
